Made necessary changes fixed contrast ratio

--- a/styles.css
+++ b/styles.css
@@ -10,15 +10,19 @@
  a {
   text-decoration: none;
   padding: 5px;
-  color: aqua;
+  color: white;
+ text-shadow: 1px 1px darkblue;
  }
 
  p {
- color: rgba(0, 255, 255, 1);
+ color: white;
+ text-shadow: 1px 1px darkblue;
+ font-size: larger;
  }
-
- h2 {
- color: rgba(0, 255, 255, 1);
+ 
+ h2{
+  text-shadow: 2px 2px darkblue;
+   color: whitesmoke;
  }
  
  header {
@@ -30,8 +34,16 @@
     margin-top: 10px;
   }
 
+  ion-icon {
+    color: whitesmoke;
+    transition: color 0.2s;
+    text-decoration: none;
+    font-size: x-large;
+  }
+
   header nav a {
-    color: cyan;
+    color: white;
+    text-shadow: 2px 2px black;
     text-decoration: none;
     margin: 10px;
     text-align: left;
@@ -59,7 +71,7 @@
 }
 
 .hero video {
-    position: absolute;
+     position: fixed;
     top: 0;
     right: 0;
     width: 100%;
@@ -69,15 +81,14 @@
 }
 
 .hero .btn2 {
-  width: 24%;
+  width: 50%;
   height: 44px;
-  background: #fff;
+  background: lightseagreen;
   border: none;
   outline: none;
   border-radius: 40px;
   box-shadow: 0 0 10px rgba(0, 0, 0, .1);
   font-size: 16px;
-  color: darkcyan;
   font-weight: 600;
   backdrop-filter: blur(10px);
 }
@@ -86,7 +97,7 @@
   text-align: center;
   padding: 40px 0;
   background-color: #fff;
-  background: url('media/lightning-gd1f7c93cd_1920.jpg') no-repeat fixed;
+  background: url('media/blue-ge56ceb221_1920.jpg') no-repeat fixed ;
   background-size: cover;
   background-attachment: fixed;
   overflow: hidden;
@@ -94,6 +105,8 @@
 
 .random-info h2 {
   font-size: 2rem;
+  text-shadow: 2px 2px darkblue;
+  color: whitesmoke;
 }
 
 .info {
@@ -118,6 +131,8 @@
   font-size: 1.2rem;
   display: inline-block;
   vertical-align: middle;
+  color: whitesmoke;
+  text-shadow: 2px 2px darkblue;
 }
 
 
@@ -202,6 +217,7 @@ footer {
   color: #555;
   margin: 0;
   color: aquamarine;
+  text-shadow: 2px 2px darkgreen;
 }
 
 
